# Inquiro-Backend-v2

./: .gitignore  makefile  pyproject.toml
app/: config.py  dependencies.py  lifecycle.py  main.py
app/config/: firebase.py  settings.py
app/modules/: __init__.py
app/modules/chat/: dto.py  router.py
app/modules/chat/message/: dto.py  router.py
app/modules/dashboard/: router.py
app/modules/datasource/: router.py
app/modules/inference/: dto.py  router.py
app/modules/snippet/: router.py
app/modules/sql/: dto.py  router.py
app/utils/llm/: __init__.py  gpt_35_turbo.py  gpt_4.py  model.py
app/utils/sql_generation/: abstract_generator.py
app/utils/sql_generation/din_sql/: generator.py
app/utils/sql_generation/din_sql/module/: classification.py  schema_linking.py
docs/: Health.bru
docs/chat/: Create chat log.bru  Create chat.bru  Get all chats.bru  Get chat logs.bru  Update chat.bru
docs/datasources/: Create datasource.bru
docs/environments/: Local.bru
docs/inference/: Generate SQL.bru
prisma/: schema.prisma
