[tool.poetry]
name = "inquiro-backend-v2"
version = "0.1.0"
description = ""
authors = ["tontan2545 <tontan2545@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
python-jose = "^3.3.0"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

