[tool.poetry]
name = "inquiro-backend-v2"
version = "0.1.0"
description = ""
authors = ["tontan2545 <tontan2545@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
python-jose = "^3.3.0"
pydantic-settings = "^2.0.3"
openai = "^0.28.1"
prisma = "^0.10.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.9.1"}

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

